--- a/.github/workflows/deployment1.yaml
+++ b/.github/workflows/deployment1.yaml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get code  ###This is the first step in the deployment process
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2  ## This action checks out the code from the repository
       - name: Install dependencies
         run: npm ci
       - name: Lint  ##This is used to  
