--- a/.github/workflows/deployment1.yaml
+++ b/.github/workflows/deployment1.yaml
@@ -1,4 +1,4 @@
-name: Deployment Exercise 1
+name: Test
 on: push
 jobs:
   deploy:
@@ -8,8 +8,8 @@ jobs:
         uses: actions/checkout@v2  ## This action checks out the code from the repository
       - name: Install dependencies
         run: npm ci
-      - name: Lint  ##This is used to  
-        run: npm run lint ##This step checks the code for errors and style issues
+      ##- name: Lint  ##This is used to  
+      ##  run: npm run lint ##This step checks the code for errors and style issues
       - name: Test code ##This step runs the tests to ensure the code works as expected
         run: npm run test  ## This command executes the test suite
       - name: Build code  ## This step compiles the code into a production-ready format
