--- a/.github/workflows/deployment2.yaml
+++ b/.github/workflows/deployment2.yaml
@@ -8,8 +8,8 @@ jobs:
         uses: actions/checkout@v4 ## This action checks out the repository code
       - name: Install dependencies ## This step installs the necessary dependencies for the project
         run: npm ci ## This command installs the dependencies defined in package-lock.json
-      - name: Lint
-        run: npm run lint ## This command runs the linter to check for code style issues
+      ##- name: Lint
+      ##  run: npm run lint ## This command runs the linter to check for code style issues
   test:
     needs: lint
     runs-on: ubuntu-latest
